Finished works CRUD and added to home page. Added download cv button

--- a/app/components/modal_component.html.erb
+++ b/app/components/modal_component.html.erb
@@ -3,13 +3,13 @@
         data-controller="modal"
         data-modal-target="modalWrapper"
         data-action="keyup@document->modal#handleKeyup turbo:submit-end->modal#submitEnd"
-        class="relative z-10"
+        class="hidden relative z-10"
         aria-labelledby="modal-title"
         role="dialog"
         aria-modal="true">
 
         <div
-            class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"
+            class="hidden fixed inset-0 h-full w-full bg-gray-500 bg-opacity-75 transition-opacity"
             data-modal-target="modalBackdrop"
             data-transition-enter="ease-out duration-300"
             data-transition-enter-start="opacity-0"
@@ -22,7 +22,7 @@
         <div class="fixed inset-0 z-10 overflow-y-auto">
             <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
                 <div
-                    class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg"
+                    class="hidden relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg"
                     data-modal-target="modalPanel"
                     data-transition-enter="ease-out duration-300"
                     data-transition-enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
