--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html class="h-max antialiased dark">
+<html class="min-h-full antialiased dark">
     <head>
-        <title>Portofolio</title>
+        <title>GCalderonM</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <%= csrf_meta_tags %>
         <%= csp_meta_tag %>
