--- a/app/views/admin/works/_form.html.erb
+++ b/app/views/admin/works/_form.html.erb
@@ -1,15 +1,20 @@
 <%= form_for [:admin, @work] do |form| %>
   <% if work.errors.any? %>
-    <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
+    <div id="error_explanation" class="bg-red-100 text-red-600 px-3 py-2 font-medium rounded-lg mt-3">
       <h2><%= pluralize(work.errors.count, "error") %> prohibited this work from being saved:</h2>
 
-      <ul>
+      <ul class="px-6">
         <% work.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+          <li class="list-disc"><%= error.full_message %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
+
+  <div class="my-5">
+    <%= form.label :logo %>
+    <%= form.file_field :logo, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  </div>
 
   <div class="my-5">
     <%= form.label :company_name %>
