--- a/app/views/admin/works/edit.html.erb
+++ b/app/views/admin/works/edit.html.erb
@@ -1,8 +1,3 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing work</h1>
-
-  <%= render "form", work: @work %>
-
-  <%= link_to "Show this work", @work, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to works", works_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-</div>
+<%= render(ModalComponent.new(title: "Edit #{@work.company_name} work")) do %>
+    <%= render "form", work: @work %>
+<% end %>
