--- a/app/views/admin/works/index.html.erb
+++ b/app/views/admin/works/index.html.erb
@@ -1,12 +1,6 @@
-<div class="w-full">
-    <% if notice.present? %>
-        <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice">
-            <%= notice %>
-        </p>
-    <% end %>
-
+<div class="w-full container">
     <div class="flex items-center justify-between">
-        <h1 class="title-text">Tags</h1>
+        <h1 class="text-2xl font-bold">Tags</h1>
         <div>
             <%= link_to new_admin_work_path, class: "rounded-lg py-1.5 px-5 bg-blue-600 text-white block font-medium", data: { turbo_frame: "modal" } do %>
                 <i class="fa-solid fa-plus"></i>
@@ -20,10 +14,19 @@
             <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                 <tr>
                     <th scope="col" class="px-6 py-3">
-                        Name
+                        Logo
                     </th>
                     <th scope="col" class="px-6 py-3">
-                        Color
+                        Company name
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                        Job
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                        Start year
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                        Finish year
                     </th>
                     <th scope="col" class="px-6 py-3 text-end">
                         Actions
