--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,7 +37,7 @@
                             <h1>Last blog posts</h1>
                         </div>
                         <div class="space-y-10 lg:pl-16 xl:pl-24">
-                            <form action="/thank-you" class="rounded-2xl border border-zinc-100 p-6">
+                            <%# <form action="/thank-you" class="rounded-2xl border border-zinc-100 p-6">
                                 <h2 class="flex items-center text-sm font-semibold text-zinc-900">
                                     <svg viewBox="0 0 24 24" fill="none" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" class="h-6 w-6 flex-none">
                                         <path d="M2.75 7.75a3 3 0 0 1 3-3h12.5a3 3 0 0 1 3 3v8.5a3 3 0 0 1-3 3H5.75a3 3 0 0 1-3-3v-8.5Z" class="fill-zinc-100 stroke-zinc-400 dark:fill-zinc-100/10 dark:stroke-zinc-500"></path>
@@ -54,7 +54,7 @@
                                     <input type="email" placeholder="Email address" aria-label="Email address" required class="min-w-0 flex-auto appearance-none rounded-md border border-zinc-900/10 bg-white px-3 py-[calc(theme(spacing.2)-1px)] shadow-md shadow-zinc-800/5 placeholder:text-zinc-400 focus:border-teal-500 focus:outline-none focus:ring-4 focus:ring-teal-500/10 dark:border-zinc-700 dark:bg-zinc-700/[0.15] dark:text-zinc-200 dark:placeholder:text-zinc-500 dark:focus:border-teal-400 dark:focus:ring-teal-400/10 sm:text-sm">
                                     <button class="inline-flex items-center gap-2 justify-center rounded-md py-2 px-3 text-sm outline-offset-2 transition active:transition-none bg-zinc-800 font-semibold text-zinc-100 hover:bg-zinc-700 active:bg-zinc-800 active:text-zinc-100/70 dark:bg-zinc-700 dark:hover:bg-zinc-600 dark:active:bg-zinc-700 dark:active:text-zinc-100/70 ml-4 flex-none" type="submit">Join</button>
                                 </div>
-                            </form>
+                            </form> %>
                             <div class="rounded-2xl border border-zinc-100 p-6">
                                 <h2 class="flex items-center text-sm font-semibold text-zinc-900">
                                     <svg viewBox="0 0 24 24" fill="none" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" class="h-6 w-6 flex-none">
@@ -66,23 +66,35 @@
                                     </span>
                                 </h2>
                                 <ol class="mt-6 space-y-4">
-                                    <li class="flex gap-4">
-                                        <div class="relative mt-1 flex h-10 w-10 flex-none items-center justify-center rounded-full shadow-md shadow-zinc-800/5 ring-1 ring-zinc-900/5 dark:border dark:border-zinc-700/50 dark:bg-zinc-800 dark:ring-0">
-                                            <img alt="" src="/_next/static/media/planetaria.ecd81ade.svg" width="32" height="32" decoding="async" data-nimg="1" class="h-7 w-7" loading="lazy" style="color: transparent;">
-                                        </div>
-                                        <dl class="flex flex-auto flex-wrap gap-x-2">
-                                            <dt class="sr-only">Company</dt>
-                                            <dd class="w-full flex-none text-sm font-medium text-zinc-900">Planetaria</dd>
-                                            <dt class="sr-only">Role</dt><dd class="text-xs text-zinc-500">CEO</dd>
-                                            <dt class="sr-only">Date</dt>
-                                            <dd class="ml-auto text-xs text-zinc-400" aria-label="2019 until Present">
-                                                <time datetime="2019">2019</time>
-                                                <span aria-hidden="true">—</span>
-                                                <time datetime="2023">Present</time>
-                                            </dd>
-                                        </dl>
-                                    </li>
+                                    <% @works.each do |work| %>
+                                        <li class="flex gap-4">
+                                            <div class="relative mt-1 flex h-10 w-10 flex-none items-center justify-center rounded-full shadow-md shadow-zinc-800/5 ring-1 ring-zinc-900/5 dark:border dark:border-zinc-700/50 dark:bg-zinc-800 dark:ring-0">
+                                                <%= image_tag work.logo, class: "object-cover rounded-lg h-7" %>
+                                            </div>
+                                            <dl class="flex flex-auto flex-wrap gap-x-2">
+                                                <%# <dt class="sr-only">work</dt> %>
+                                                <dd class="w-full flex-none text-sm font-bold text-zinc-900 dark:text-zinc-400">
+                                                    <%= work.company_name %>
+                                                </dd>
+                                                <dt class="sr-only">Role</dt><dd class="text-xs text-zinc-500">
+                                                    <%= work.job %>
+                                                </dd>
+                                                <dt class="sr-only">Date</dt>
+                                                <dd class="ml-auto text-xs text-zinc-400">
+                                                    <time datetime="<%= work.start_year %>"><%= work.start_year %></time>
+                                                    <span aria-hidden="true">—</span>
+                                                    <time datetime="<%= work.finish_year %>"><%= work.finish_year %></time>
+                                                </dd>
+                                            </dl>
+                                        </li>
+                                    <% end %>
                                 </ol>
+                                <%= link_to download_cv_path, class: "inline-flex items-center gap-2 justify-center rounded-md py-2 px-3 text-sm outline-offset-2 transition active:transition-none bg-zinc-50 font-medium text-zinc-900 hover:bg-zinc-100 active:bg-zinc-100 active:text-zinc-900/60 dark:bg-zinc-800/50 dark:text-zinc-300 dark:hover:bg-zinc-800 dark:hover:text-zinc-50 dark:active:bg-zinc-800/50 dark:active:text-zinc-50/70 group mt-6 w-full" do %>
+                                    Download CV
+                                    <svg viewBox="0 0 16 16" fill="none" aria-hidden="true" class="h-4 w-4 stroke-zinc-400 transition group-active:stroke-zinc-600 dark:group-hover:stroke-zinc-50 dark:group-active:stroke-zinc-50">
+                                        <path d="M4.75 8.75 8 12.25m0 0 3.25-3.5M8 12.25v-8.5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                    </svg>
+                                <% end %>
                             </div>
                         </div>
                     </div>
