--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,6 +13,9 @@
 
     <body class="flex h-screen flex-col bg-zinc-50 dark:bg-black">
         <%= render "shared/admin_navbar" %>
+        <%= turbo_frame_tag "flash_alerts" do %>
+            <%= render "shared/flash_alerts" %>
+        <% end %>
         <main class="flex justify-center h-full mt-12 px-2 sm:px-4 py-2.5">
             <%= yield %>
             <%= turbo_frame_tag "modal" %>
