--- a/app/views/admin/works/index.html.erb
+++ b/app/views/admin/works/index.html.erb
@@ -1,6 +1,6 @@
 <div class="w-full container">
     <div class="flex items-center justify-between">
-        <h1 class="text-2xl font-bold">Tags</h1>
+        <h1 class="text-2xl font-bold">Works</h1>
         <div>
             <%= link_to new_admin_work_path, class: "rounded-lg py-1.5 px-5 bg-blue-600 text-white block font-medium", data: { turbo_frame: "modal" } do %>
                 <i class="fa-solid fa-plus"></i>
