--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,8 +33,33 @@
             <div class="relative px-4 sm:px-8">
                 <div class="mx-auto max-w-2xl lg:max-w-5xl">
                     <div class="mx-auto grid max-w-xl grid-cols-1 gap-y-20 lg:max-w-none lg:grid-cols-2">
-                        <div class="flex flex-col">
-                            <h1>Last blog posts</h1>
+                        <div class="flex flex-col gap-16">
+                            <% @posts.each do |post| %>
+                                <article class="group relative flex flex-col items-start">
+                                    <h2 class="text-base font-semibold tracking-tight text-zinc-800 dark:text-zinc-100">
+                                        <div class="absolute -inset-y-6 -inset-x-4 z-0 scale-95 bg-zinc-50 opacity-0 transition group-hover:scale-100 group-hover:opacity-100 dark:bg-zinc-800/50 sm:-inset-x-6 sm:rounded-2xl"></div>
+                                        <%= link_to post_path(post) do %>
+                                            <span class="absolute -inset-y-6 -inset-x-4 z-20 sm:-inset-x-6 sm:rounded-2xl"></span>
+                                            <span class="relative z-10"><%= post.title %></span>
+                                        <% end %>
+                                    </h2>
+                                    <time class="relative z-10 order-first mb-3 flex items-center text-sm text-zinc-400 dark:text-zinc-500 pl-3.5" datetime="2022-09-05">
+                                        <span class="absolute inset-y-0 left-0 flex items-center" aria-hidden="true">
+                                            <span class="h-4 w-0.5 rounded-full bg-zinc-200 dark:bg-zinc-500"></span>
+                                        </span>
+                                        <%= post.created_at.strftime('%B %e, %Y') %>
+                                    </time>
+                                    <p class="relative z-10 mt-2 text-sm text-zinc-600 dark:text-zinc-400">
+                                        <%= post.content.to_plain_text.truncate(150) %>
+                                    </p>
+                                    <div aria-hidden="true" class="relative z-10 mt-4 flex items-center text-sm font-medium text-teal-500">
+                                        Read article
+                                        <svg viewBox="0 0 16 16" fill="none" aria-hidden="true" class="ml-1 h-4 w-4 stroke-current">
+                                            <path d="M6.75 5.75 9.25 8l-2.5 2.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                        </svg>
+                                    </div>
+                                </article>
+                            <% end %>
                         </div>
                         <div class="space-y-10 lg:pl-16 xl:pl-24">
                             <%# <form action="/thank-you" class="rounded-2xl border border-zinc-100 p-6">
