--- a/app/views/shared/_admin_navbar.html.erb
+++ b/app/views/shared/_admin_navbar.html.erb
@@ -14,6 +14,11 @@
                 <span>Works</span>
             <% end %>
         </li>
+        <li>
+            <%= link_to admin_posts_path, class: "block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" do %>
+                <span>Posts</span>
+            <% end %>
+        </li>
       </ul>
     </div>
   </div>
