--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,52 +34,38 @@
                 <div class="mx-auto max-w-2xl lg:max-w-5xl">
                     <div class="mx-auto grid max-w-xl grid-cols-1 gap-y-20 lg:max-w-none lg:grid-cols-2">
                         <div class="flex flex-col gap-16">
-                            <% @posts.each do |post| %>
-                                <article class="group relative flex flex-col items-start">
-                                    <h2 class="text-base font-semibold tracking-tight text-zinc-800 dark:text-zinc-100">
-                                        <div class="absolute -inset-y-6 -inset-x-4 z-0 scale-95 bg-zinc-50 opacity-0 transition group-hover:scale-100 group-hover:opacity-100 dark:bg-zinc-800/50 sm:-inset-x-6 sm:rounded-2xl"></div>
-                                        <%= link_to post_path(post) do %>
-                                            <span class="absolute -inset-y-6 -inset-x-4 z-20 sm:-inset-x-6 sm:rounded-2xl"></span>
-                                            <span class="relative z-10"><%= post.title %></span>
-                                        <% end %>
-                                    </h2>
-                                    <time class="relative z-10 order-first mb-3 flex items-center text-sm text-zinc-400 dark:text-zinc-500 pl-3.5" datetime="2022-09-05">
-                                        <span class="absolute inset-y-0 left-0 flex items-center" aria-hidden="true">
-                                            <span class="h-4 w-0.5 rounded-full bg-zinc-200 dark:bg-zinc-500"></span>
-                                        </span>
-                                        <%= post.created_at.strftime('%B %e, %Y') %>
-                                    </time>
-                                    <p class="relative z-10 mt-2 text-sm text-zinc-600 dark:text-zinc-400">
-                                        <%= post.content.to_plain_text.truncate(150) %>
-                                    </p>
-                                    <div aria-hidden="true" class="relative z-10 mt-4 flex items-center text-sm font-medium text-teal-500">
-                                        Read article
-                                        <svg viewBox="0 0 16 16" fill="none" aria-hidden="true" class="ml-1 h-4 w-4 stroke-current">
-                                            <path d="M6.75 5.75 9.25 8l-2.5 2.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                                        </svg>
-                                    </div>
-                                </article>
+                            <% if @post.present? %>
+                                <% @posts.each do |post| %>
+                                    <article class="group relative flex flex-col items-start">
+                                        <h2 class="text-base font-semibold tracking-tight text-zinc-800 dark:text-zinc-100">
+                                            <div class="absolute -inset-y-6 -inset-x-4 z-0 scale-95 bg-zinc-50 opacity-0 transition group-hover:scale-100 group-hover:opacity-100 dark:bg-zinc-800/50 sm:-inset-x-6 sm:rounded-2xl"></div>
+                                            <%= link_to post_path(post) do %>
+                                                <span class="absolute -inset-y-6 -inset-x-4 z-20 sm:-inset-x-6 sm:rounded-2xl"></span>
+                                                <span class="relative z-10"><%= post.title %></span>
+                                            <% end %>
+                                        </h2>
+                                        <time class="relative z-10 order-first mb-3 flex items-center text-sm text-zinc-400 dark:text-zinc-500 pl-3.5" datetime="2022-09-05">
+                                            <span class="absolute inset-y-0 left-0 flex items-center" aria-hidden="true">
+                                                <span class="h-4 w-0.5 rounded-full bg-zinc-200 dark:bg-zinc-500"></span>
+                                            </span>
+                                            <%= post.created_at.strftime('%B %e, %Y') %>
+                                        </time>
+                                        <p class="relative z-10 mt-2 text-sm text-zinc-600 dark:text-zinc-400">
+                                            <%= post.content.to_plain_text.truncate(150) %>
+                                        </p>
+                                        <div aria-hidden="true" class="relative z-10 mt-4 flex items-center text-sm font-medium text-teal-500">
+                                            Read article
+                                            <svg viewBox="0 0 16 16" fill="none" aria-hidden="true" class="ml-1 h-4 w-4 stroke-current">
+                                                <path d="M6.75 5.75 9.25 8l-2.5 2.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                            </svg>
+                                        </div>
+                                    </article>
+                                <% end %>
+                            <% else %>
+                                <h2 class="text-xl text-zinc-800 dark:text-zinc-100">There's no available post</h2>
                             <% end %>
                         </div>
                         <div class="space-y-10 lg:pl-16 xl:pl-24">
-                            <%# <form action="/thank-you" class="rounded-2xl border border-zinc-100 p-6">
-                                <h2 class="flex items-center text-sm font-semibold text-zinc-900">
-                                    <svg viewBox="0 0 24 24" fill="none" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" class="h-6 w-6 flex-none">
-                                        <path d="M2.75 7.75a3 3 0 0 1 3-3h12.5a3 3 0 0 1 3 3v8.5a3 3 0 0 1-3 3H5.75a3 3 0 0 1-3-3v-8.5Z" class="fill-zinc-100 stroke-zinc-400 dark:fill-zinc-100/10 dark:stroke-zinc-500"></path>
-                                        <path d="m4 6 6.024 5.479a2.915 2.915 0 0 0 3.952 0L20 6" class="stroke-zinc-400"></path>
-                                    </svg>
-                                    <span class="ml-3 dark:text-zinc-100">
-                                        Stay up to date
-                                    </span>
-                                </h2>
-                                <p class="mt-2 text-sm text-zinc-600">
-                                    Get notified when I publish something new, and unsubscribe at any time.
-                                </p>
-                                <div class="mt-6 flex">
-                                    <input type="email" placeholder="Email address" aria-label="Email address" required class="min-w-0 flex-auto appearance-none rounded-md border border-zinc-900/10 bg-white px-3 py-[calc(theme(spacing.2)-1px)] shadow-md shadow-zinc-800/5 placeholder:text-zinc-400 focus:border-teal-500 focus:outline-none focus:ring-4 focus:ring-teal-500/10 dark:border-zinc-700 dark:bg-zinc-700/[0.15] dark:text-zinc-200 dark:placeholder:text-zinc-500 dark:focus:border-teal-400 dark:focus:ring-teal-400/10 sm:text-sm">
-                                    <button class="inline-flex items-center gap-2 justify-center rounded-md py-2 px-3 text-sm outline-offset-2 transition active:transition-none bg-zinc-800 font-semibold text-zinc-100 hover:bg-zinc-700 active:bg-zinc-800 active:text-zinc-100/70 dark:bg-zinc-700 dark:hover:bg-zinc-600 dark:active:bg-zinc-700 dark:active:text-zinc-100/70 ml-4 flex-none" type="submit">Join</button>
-                                </div>
-                            </form> %>
                             <div class="rounded-2xl border border-zinc-100 p-6">
                                 <h2 class="flex items-center text-sm font-semibold text-zinc-900">
                                     <svg viewBox="0 0 24 24" fill="none" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" class="h-6 w-6 flex-none">
@@ -91,27 +77,31 @@
                                     </span>
                                 </h2>
                                 <ol class="mt-6 space-y-4">
-                                    <% @works.each do |work| %>
-                                        <li class="flex gap-4">
-                                            <div class="relative mt-1 flex h-10 w-10 flex-none items-center justify-center rounded-full shadow-md shadow-zinc-800/5 ring-1 ring-zinc-900/5 dark:border dark:border-zinc-700/50 dark:bg-zinc-800 dark:ring-0">
-                                                <%= image_tag work.logo, class: "object-cover rounded-lg h-7" %>
-                                            </div>
-                                            <dl class="flex flex-auto flex-wrap gap-x-2">
-                                                <%# <dt class="sr-only">work</dt> %>
-                                                <dd class="w-full flex-none text-sm font-bold text-zinc-900 dark:text-zinc-400">
-                                                    <%= work.company_name %>
-                                                </dd>
-                                                <dt class="sr-only">Role</dt><dd class="text-xs text-zinc-500">
-                                                    <%= work.job %>
-                                                </dd>
-                                                <dt class="sr-only">Date</dt>
-                                                <dd class="ml-auto text-xs text-zinc-400">
-                                                    <time datetime="<%= work.start_year %>"><%= work.start_year %></time>
-                                                    <span aria-hidden="true">—</span>
-                                                    <time datetime="<%= work.finish_year %>"><%= work.finish_year %></time>
-                                                </dd>
-                                            </dl>
-                                        </li>
+                                    <% if @works.present? %>
+                                        <% @works.each do |work| %>
+                                            <li class="flex gap-4">
+                                                <div class="relative mt-1 flex h-10 w-10 flex-none items-center justify-center rounded-full shadow-md shadow-zinc-800/5 ring-1 ring-zinc-900/5 dark:border dark:border-zinc-700/50 dark:bg-zinc-800 dark:ring-0">
+                                                    <%= image_tag work.logo, class: "object-cover rounded-lg h-7" %>
+                                                </div>
+                                                <dl class="flex flex-auto flex-wrap gap-x-2">
+                                                    <%# <dt class="sr-only">work</dt> %>
+                                                    <dd class="w-full flex-none text-sm font-bold text-zinc-900 dark:text-zinc-400">
+                                                        <%= work.company_name %>
+                                                    </dd>
+                                                    <dt class="sr-only">Role</dt><dd class="text-xs text-zinc-500">
+                                                        <%= work.job %>
+                                                    </dd>
+                                                    <dt class="sr-only">Date</dt>
+                                                    <dd class="ml-auto text-xs text-zinc-400">
+                                                        <time datetime="<%= work.start_year %>"><%= work.start_year %></time>
+                                                        <span aria-hidden="true">—</span>
+                                                        <time datetime="<%= work.finish_year %>"><%= work.finish_year %></time>
+                                                    </dd>
+                                                </dl>
+                                            </li>
+                                        <% end %>
+                                    <% else %>
+                                        <h2 class="text-zinc-800 dark:text-zinc-100">There's no available works</h2>
                                     <% end %>
                                 </ol>
                                 <%= link_to download_cv_path, class: "inline-flex items-center gap-2 justify-center rounded-md py-2 px-3 text-sm outline-offset-2 transition active:transition-none bg-zinc-50 font-medium text-zinc-900 hover:bg-zinc-100 active:bg-zinc-100 active:text-zinc-900/60 dark:bg-zinc-800/50 dark:text-zinc-300 dark:hover:bg-zinc-800 dark:hover:text-zinc-50 dark:active:bg-zinc-800/50 dark:active:text-zinc-50/70 group mt-6 w-full" do %>
