--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
 
     <div class="hidden md:flex rounded-full bg-white/90 px-3 text-zinc-800 text-sm font-medium ring-1 ring-zinc-900/5 backdrop-blur shadow-lg dark:bg-zinc-800/90 dark:text-zinc-200 dark:ring-white/10">
         <%= link_to "Blog", "#", class: "block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" %>
-        <%= link_to "Projects", "#", class: "block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" %>
+        <%= link_to "Projects", projects_path, class: "block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" %>
         <%= link_to "Uses", "#", class: "block px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-400" %>
     </div>
 
