--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,120 +1,69 @@
-<main class="mt-24 px-16">
-    <div class="max-w-2xl">
-        <%= link_to root_path, class: "block md:hidden" do %>
-            <%= image_tag "me", class: "rounded-full bg-zinc-100 object-cover dark:bg-zinc-800 h-12 w-12 mb-5" %>
+<div class="flex flex-col justify-center mx-auto max-w-4xl text-center mt-24">
+    <h1 class="text-4xl font-extrabold tracking-tight text-zinc-800 sm:text-5xl dark:text-zinc-100">
+        Software developer focusing on Backend.
+    </h1>
+    <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400">
+        I'm Guillermo, a software developer based in Spain.
+    </p>
+    <div class="mt-6 flex gap-6 justify-center">
+        <%= link_to "https://www.instagram.com/galletacm", class: "group -m-1 p-1", target: "_blank" do %>
+            <svg viewBox="0 0 24 24" aria-hidden="true" class="h-6 w-6 fill-zinc-500 transition group-hover:fill-zinc-600 dark:fill-zinc-400 dark:group-hover:fill-zinc-300">
+                <path d="M12 3c-2.444 0-2.75.01-3.71.054-.959.044-1.613.196-2.185.418A4.412 4.412 0 0 0 4.51 4.511c-.5.5-.809 1.002-1.039 1.594-.222.572-.374 1.226-.418 2.184C3.01 9.25 3 9.556 3 12s.01 2.75.054 3.71c.044.959.196 1.613.418 2.185.23.592.538 1.094 1.039 1.595.5.5 1.002.808 1.594 1.038.572.222 1.226.374 2.184.418C9.25 20.99 9.556 21 12 21s2.75-.01 3.71-.054c.959-.044 1.613-.196 2.185-.419a4.412 4.412 0 0 0 1.595-1.038c.5-.5.808-1.002 1.038-1.594.222-.572.374-1.226.418-2.184.044-.96.054-1.267.054-3.711s-.01-2.75-.054-3.71c-.044-.959-.196-1.613-.419-2.185A4.412 4.412 0 0 0 19.49 4.51c-.5-.5-1.002-.809-1.594-1.039-.572-.222-1.226-.374-2.184-.418C14.75 3.01 14.444 3 12 3Zm0 1.622c2.403 0 2.688.009 3.637.052.877.04 1.354.187 1.67.31.421.163.72.358 1.036.673.315.315.51.615.673 1.035.123.317.27.794.31 1.671.043.95.052 1.234.052 3.637s-.009 2.688-.052 3.637c-.04.877-.187 1.354-.31 1.67-.163.421-.358.72-.673 1.036a2.79 2.79 0 0 1-1.035.673c-.317.123-.794.27-1.671.31-.95.043-1.234.052-3.637.052s-2.688-.009-3.637-.052c-.877-.04-1.354-.187-1.67-.31a2.789 2.789 0 0 1-1.036-.673 2.79 2.79 0 0 1-.673-1.035c-.123-.317-.27-.794-.31-1.671-.043-.95-.052-1.234-.052-3.637s.009-2.688.052-3.637c.04-.877.187-1.354.31-1.67.163-.421.358-.72.673-1.036.315-.315.615-.51 1.035-.673.317-.123.794-.27 1.671-.31.95-.043 1.234-.052 3.637-.052Z"></path><path d="M12 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Zm0-7.622a4.622 4.622 0 1 0 0 9.244 4.622 4.622 0 0 0 0-9.244Zm5.884-.182a1.08 1.08 0 1 1-2.16 0 1.08 1.08 0 0 1 2.16 0Z"></path>
+            </svg>
         <% end %>
-        <h1 class="text-4xl font-extrabold tracking-tight text-zinc-800 sm:text-5xl dark:text-zinc-100">
-            Software developer focusing on Backend.
-        </h1>
-        <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400">
-            I'm Guillermo, a software developer based in Spain.
-        </p>
-        <div class="mt-6 flex gap-6">
-            <%= link_to "https://www.twitter.com/galletacm", class: "group -m-1 p-1", target: "_blank" do %>
-                <svg viewBox="0 0 24 24" aria-hidden="true" class="h-6 w-6 fill-zinc-500 transition group-hover:fill-zinc-600 dark:fill-zinc-400 dark:group-hover:fill-zinc-300">
-                    <path d="M20.055 7.983c.011.174.011.347.011.523 0 5.338-3.92 11.494-11.09 11.494v-.003A10.755 10.755 0 0 1 3 18.186c.308.038.618.057.928.058a7.655 7.655 0 0 0 4.841-1.733c-1.668-.032-3.13-1.16-3.642-2.805a3.753 3.753 0 0 0 1.76-.07C5.07 13.256 3.76 11.6 3.76 9.676v-.05a3.77 3.77 0 0 0 1.77.505C3.816 8.945 3.288 6.583 4.322 4.737c1.98 2.524 4.9 4.058 8.034 4.22a4.137 4.137 0 0 1 1.128-3.86A3.807 3.807 0 0 1 19 5.274a7.657 7.657 0 0 0 2.475-.98c-.29.934-.9 1.729-1.713 2.233A7.54 7.54 0 0 0 22 5.89a8.084 8.084 0 0 1-1.945 2.093Z"></path>
-                </svg>
-            <% end %>
-            <%= link_to "https://www.instagram.com/galletacm", class: "group -m-1 p-1", target: "_blank" do %>
-                <svg viewBox="0 0 24 24" aria-hidden="true" class="h-6 w-6 fill-zinc-500 transition group-hover:fill-zinc-600 dark:fill-zinc-400 dark:group-hover:fill-zinc-300">
-                    <path d="M12 3c-2.444 0-2.75.01-3.71.054-.959.044-1.613.196-2.185.418A4.412 4.412 0 0 0 4.51 4.511c-.5.5-.809 1.002-1.039 1.594-.222.572-.374 1.226-.418 2.184C3.01 9.25 3 9.556 3 12s.01 2.75.054 3.71c.044.959.196 1.613.418 2.185.23.592.538 1.094 1.039 1.595.5.5 1.002.808 1.594 1.038.572.222 1.226.374 2.184.418C9.25 20.99 9.556 21 12 21s2.75-.01 3.71-.054c.959-.044 1.613-.196 2.185-.419a4.412 4.412 0 0 0 1.595-1.038c.5-.5.808-1.002 1.038-1.594.222-.572.374-1.226.418-2.184.044-.96.054-1.267.054-3.711s-.01-2.75-.054-3.71c-.044-.959-.196-1.613-.419-2.185A4.412 4.412 0 0 0 19.49 4.51c-.5-.5-1.002-.809-1.594-1.039-.572-.222-1.226-.374-2.184-.418C14.75 3.01 14.444 3 12 3Zm0 1.622c2.403 0 2.688.009 3.637.052.877.04 1.354.187 1.67.31.421.163.72.358 1.036.673.315.315.51.615.673 1.035.123.317.27.794.31 1.671.043.95.052 1.234.052 3.637s-.009 2.688-.052 3.637c-.04.877-.187 1.354-.31 1.67-.163.421-.358.72-.673 1.036a2.79 2.79 0 0 1-1.035.673c-.317.123-.794.27-1.671.31-.95.043-1.234.052-3.637.052s-2.688-.009-3.637-.052c-.877-.04-1.354-.187-1.67-.31a2.789 2.789 0 0 1-1.036-.673 2.79 2.79 0 0 1-.673-1.035c-.123-.317-.27-.794-.31-1.671-.043-.95-.052-1.234-.052-3.637s.009-2.688.052-3.637c.04-.877.187-1.354.31-1.67.163-.421.358-.72.673-1.036.315-.315.615-.51 1.035-.673.317-.123.794-.27 1.671-.31.95-.043 1.234-.052 3.637-.052Z"></path><path d="M12 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Zm0-7.622a4.622 4.622 0 1 0 0 9.244 4.622 4.622 0 0 0 0-9.244Zm5.884-.182a1.08 1.08 0 1 1-2.16 0 1.08 1.08 0 0 1 2.16 0Z"></path>
-                </svg>
-            <% end %>
-            <%= link_to "https://www.linkedin.com/in/gcalderonmusi", class: "group -m-1 p-1", target: "_blank" do %>
-                <svg viewBox="0 0 24 24" aria-hidden="true" class="h-6 w-6 fill-zinc-500 transition group-hover:fill-zinc-600 dark:fill-zinc-400 dark:group-hover:fill-zinc-300">
-                    <path d="M18.335 18.339H15.67v-4.177c0-.996-.02-2.278-1.39-2.278-1.389 0-1.601 1.084-1.601 2.205v4.25h-2.666V9.75h2.56v1.17h.035c.358-.674 1.228-1.387 2.528-1.387 2.7 0 3.2 1.778 3.2 4.091v4.715zM7.003 8.575a1.546 1.546 0 01-1.548-1.549 1.548 1.548 0 111.547 1.549zm1.336 9.764H5.666V9.75H8.34v8.589zM19.67 3H4.329C3.593 3 3 3.58 3 4.297v15.406C3 20.42 3.594 21 4.328 21h15.338C20.4 21 21 20.42 21 19.703V4.297C21 3.58 20.4 3 19.666 3h.003z"></path>
-                </svg>
-            <% end %>
-        </div>
+        <%= link_to "https://www.linkedin.com/in/gcalderonmusi", class: "group -m-1 p-1", target: "_blank" do %>
+            <svg viewBox="0 0 24 24" aria-hidden="true" class="h-6 w-6 fill-zinc-500 transition group-hover:fill-zinc-600 dark:fill-zinc-400 dark:group-hover:fill-zinc-300">
+                <path d="M18.335 18.339H15.67v-4.177c0-.996-.02-2.278-1.39-2.278-1.389 0-1.601 1.084-1.601 2.205v4.25h-2.666V9.75h2.56v1.17h.035c.358-.674 1.228-1.387 2.528-1.387 2.7 0 3.2 1.778 3.2 4.091v4.715zM7.003 8.575a1.546 1.546 0 01-1.548-1.549 1.548 1.548 0 111.547 1.549zm1.336 9.764H5.666V9.75H8.34v8.589zM19.67 3H4.329C3.593 3 3 3.58 3 4.297v15.406C3 20.42 3.594 21 4.328 21h15.338C20.4 21 21 20.42 21 19.703V4.297C21 3.58 20.4 3 19.666 3h.003z"></path>
+            </svg>
+        <% end %>
     </div>
+</div>
 
-    <div class="mt-24">
-        <div class="mx-auto max-w-7xl lg:px-8">
-            <div class="relative px-4 sm:px-8">
-                <div class="mx-auto max-w-2xl lg:max-w-5xl">
-                    <div class="mx-auto grid max-w-xl grid-cols-1 gap-y-20 lg:max-w-none lg:grid-cols-2">
-                        <div class="flex flex-col gap-16">
-                            <% if @post.present? %>
-                                <% @posts.each do |post| %>
-                                    <article class="group relative flex flex-col items-start">
-                                        <h2 class="text-base font-semibold tracking-tight text-zinc-800 dark:text-zinc-100">
-                                            <div class="absolute -inset-y-6 -inset-x-4 z-0 scale-95 bg-zinc-50 opacity-0 transition group-hover:scale-100 group-hover:opacity-100 dark:bg-zinc-800/50 sm:-inset-x-6 sm:rounded-2xl"></div>
-                                            <%= link_to post_path(post) do %>
-                                                <span class="absolute -inset-y-6 -inset-x-4 z-20 sm:-inset-x-6 sm:rounded-2xl"></span>
-                                                <span class="relative z-10"><%= post.title %></span>
-                                            <% end %>
-                                        </h2>
-                                        <time class="relative z-10 order-first mb-3 flex items-center text-sm text-zinc-400 dark:text-zinc-500 pl-3.5" datetime="2022-09-05">
-                                            <span class="absolute inset-y-0 left-0 flex items-center" aria-hidden="true">
-                                                <span class="h-4 w-0.5 rounded-full bg-zinc-200 dark:bg-zinc-500"></span>
-                                            </span>
-                                            <%= post.created_at.strftime('%B %e, %Y') %>
-                                        </time>
-                                        <p class="relative z-10 mt-2 text-sm text-zinc-600 dark:text-zinc-400">
-                                            <%= post.content.to_plain_text.truncate(150) %>
-                                        </p>
-                                        <div aria-hidden="true" class="relative z-10 mt-4 flex items-center text-sm font-medium text-teal-500">
-                                            Read article
-                                            <svg viewBox="0 0 16 16" fill="none" aria-hidden="true" class="ml-1 h-4 w-4 stroke-current">
-                                                <path d="M6.75 5.75 9.25 8l-2.5 2.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                                            </svg>
-                                        </div>
-                                    </article>
-                                <% end %>
-                            <% else %>
-                                <h2 class="text-xl text-zinc-800 dark:text-zinc-100">There's no available post</h2>
-                            <% end %>
-                        </div>
-                        <div class="space-y-10 lg:pl-16 xl:pl-24">
-                            <div class="rounded-2xl border border-zinc-100 p-6">
-                                <h2 class="flex items-center text-sm font-semibold text-zinc-900">
-                                    <svg viewBox="0 0 24 24" fill="none" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" class="h-6 w-6 flex-none">
-                                        <path d="M2.75 9.75a3 3 0 0 1 3-3h12.5a3 3 0 0 1 3 3v8.5a3 3 0 0 1-3 3H5.75a3 3 0 0 1-3-3v-8.5Z" class="fill-zinc-100 stroke-zinc-400 dark:fill-zinc-100/10 dark:stroke-zinc-500"></path>
-                                        <path d="M3 14.25h6.249c.484 0 .952-.002 1.316.319l.777.682a.996.996 0 0 0 1.316 0l.777-.682c.364-.32.832-.319 1.316-.319H21M8.75 6.5V4.75a2 2 0 0 1 2-2h2.5a2 2 0 0 1 2 2V6.5" class="stroke-zinc-400 dark:stroke-zinc-500"></path>
-                                    </svg>
-                                    <span class="ml-3 dark:text-zinc-100">
-                                        Work
-                                    </span>
-                                </h2>
-                                <ol class="mt-6 space-y-4">
-                                    <% if @works.present? %>
-                                        <% @works.each do |work| %>
-                                            <li class="flex gap-4">
-                                                <div class="relative mt-1 flex h-10 w-10 flex-none items-center justify-center rounded-full shadow-md shadow-zinc-800/5 ring-1 ring-zinc-900/5 dark:border dark:border-zinc-700/50 dark:bg-zinc-800 dark:ring-0">
-                                                    <%= image_tag work.logo, class: "object-cover rounded-lg h-7" %>
-                                                </div>
-                                                <dl class="flex flex-auto flex-wrap gap-x-2">
-                                                    <%# <dt class="sr-only">work</dt> %>
-                                                    <dd class="w-full flex-none text-sm font-bold text-zinc-900 dark:text-zinc-400">
-                                                        <%= work.company_name %>
-                                                    </dd>
-                                                    <dt class="sr-only">Role</dt><dd class="text-xs text-zinc-500">
-                                                        <%= work.job %>
-                                                    </dd>
-                                                    <dt class="sr-only">Date</dt>
-                                                    <dd class="ml-auto text-xs text-zinc-400">
-                                                        <time datetime="<%= work.start_year %>"><%= work.start_year %></time>
-                                                        <span aria-hidden="true">—</span>
-                                                        <time datetime="<%= work.finish_year %>"><%= work.finish_year %></time>
-                                                    </dd>
-                                                </dl>
-                                            </li>
-                                        <% end %>
-                                    <% else %>
-                                        <h2 class="text-zinc-800 dark:text-zinc-100">There's no available works</h2>
-                                    <% end %>
-                                </ol>
-                                <%= link_to download_cv_path, class: "inline-flex items-center gap-2 justify-center rounded-md py-2 px-3 text-sm outline-offset-2 transition active:transition-none bg-zinc-50 font-medium text-zinc-900 hover:bg-zinc-100 active:bg-zinc-100 active:text-zinc-900/60 dark:bg-zinc-800/50 dark:text-zinc-300 dark:hover:bg-zinc-800 dark:hover:text-zinc-50 dark:active:bg-zinc-800/50 dark:active:text-zinc-50/70 group mt-6 w-full" do %>
-                                    Download CV
-                                    <svg viewBox="0 0 16 16" fill="none" aria-hidden="true" class="h-4 w-4 stroke-zinc-400 transition group-active:stroke-zinc-600 dark:group-hover:stroke-zinc-50 dark:group-active:stroke-zinc-50">
-                                        <path d="M4.75 8.75 8 12.25m0 0 3.25-3.5M8 12.25v-8.5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                                    </svg>
-                                <% end %>
-                            </div>
-                        </div>
+<div class="flex flex-col justify-center mx-auto max-w-4xl text-center mt-24">
+    <h1 class="text-4xl font-extrabold tracking-tight text-zinc-800 sm:text-5xl dark:text-zinc-100">
+        Projects that I built during my learning.
+    </h1>
+    <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400">
+        This are some projects I built during my learning on school and on my free time. I use a lot of technologies, so check it out!
+    </p>
+
+    <div class="mt-16 mb-16 sm:mt-20">
+        <% if @projects.present? %>
+        <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-24 gap-y-16">
+            <% @projects.each do |project| %>
+                <li class="group relative flex flex-col items-start">
+                    <div class="relative z-10 flex h-12 w-12 items-center justify-center rounded-full bg-white shadow-md shadow-zinc-800/5 ring-1 ring-zinc-900/5 dark:border dark:border-zinc-700/50 dark:ring-0">
+                        <% if project.image.attached? %>
+                            <%= image_tag project.image, class: "object-contain h-8 w-8" %>
+                        <% else %>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="w-8 h-8" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                <path class="fill-zinc-100 stroke-zinc-400 dark:fill-zinc-100/10 dark:stroke-zinc-500" stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75L22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3l-4.5 16.5" />
+                            </svg>
+                        <% end %>
                     </div>
-                </div>
-            </div>
-        </div>
+                    <h2 class="mt-6 text-base font-semibold text-zinc-800 dark:text-zinc-100">
+                        <div class="absolute -inset-y-6 -inset-x-4 z-0 scale-95 bg-zinc-50 opacity-0 transition group-hover:scale-100 group-hover:opacity-100 dark:bg-zinc-800/50 sm:-inset-x-6 sm:rounded-2xl"></div>
+                        <%= link_to project.project_url, target: "_blank" do %>
+                            <span class="absolute -inset-y-6 -inset-x-4 z-20 sm:-inset-x-6 sm:rounded-2xl"></span>
+                            <span class="relative z-10"><%= project.name %></span>
+                        <% end %>
+                    </h2>
+                    <p class="relative z-10 mt-2 text-sm text-zinc-600 dark:text-zinc-400 text-left">
+                        <%= truncate(project.description, length: 100) %>
+                    </p>
+                    <p class="relative z-10 mt-6 flex text-sm font-medium text-zinc-400 transition group-hover:text-teal-500 dark:text-zinc-200">
+                        <svg viewBox="0 0 24 24" aria-hidden="true" class="h-6 w-6 flex-none">
+                            <path d="M15.712 11.823a.75.75 0 1 0 1.06 1.06l-1.06-1.06Zm-4.95 1.768a.75.75 0 0 0 1.06-1.06l-1.06 1.06Zm-2.475-1.414a.75.75 0 1 0-1.06-1.06l1.06 1.06Zm4.95-1.768a.75.75 0 1 0-1.06 1.06l1.06-1.06Zm3.359.53-.884.884 1.06 1.06.885-.883-1.061-1.06Zm-4.95-2.12 1.414-1.415L12 6.344l-1.415 1.413 1.061 1.061Zm0 3.535a2.5 2.5 0 0 1 0-3.536l-1.06-1.06a4 4 0 0 0 0 5.656l1.06-1.06Zm4.95-4.95a2.5 2.5 0 0 1 0 3.535L17.656 12a4 4 0 0 0 0-5.657l-1.06 1.06Zm1.06-1.06a4 4 0 0 0-5.656 0l1.06 1.06a2.5 2.5 0 0 1 3.536 0l1.06-1.06Zm-7.07 7.07.176.177 1.06-1.06-.176-.177-1.06 1.06Zm-3.183-.353.884-.884-1.06-1.06-.884.883 1.06 1.06Zm4.95 2.121-1.414 1.414 1.06 1.06 1.415-1.413-1.06-1.061Zm0-3.536a2.5 2.5 0 0 1 0 3.536l1.06 1.06a4 4 0 0 0 0-5.656l-1.06 1.06Zm-4.95 4.95a2.5 2.5 0 0 1 0-3.535L6.344 12a4 4 0 0 0 0 5.656l1.06-1.06Zm-1.06 1.06a4 4 0 0 0 5.657 0l-1.061-1.06a2.5 2.5 0 0 1-3.535 0l-1.061 1.06Zm7.07-7.07-.176-.177-1.06 1.06.176.178 1.06-1.061Z" fill="currentColor" data-darkreader-inline-fill="" style="--darkreader-inline-fill:currentColor;"></path>
+                        </svg>
+                        <span class="ml-2">
+                            <%= truncate(project.project_url, length: 25) %>
+                        </span>
+                    </p>
+                </li>
+            <% end %>
+        </ul>
+        <% else %>
+            <h2 class="text-xl text-zinc-800 dark:text-zinc-100">There's no available projects :(</h2>
+        <% end %>
     </div>
-</main>
+</div>
