--- a/app/views/home/show_post.html.erb
+++ b/app/views/home/show_post.html.erb
@@ -1,1 +1,17 @@
-<h1><%= post.title %></h1>
+<div class="flex flex-col justify-center mx-auto max-w-4xl text-center mt-24">
+    <h1 class="flex items-center justify-center text-4xl font-extrabold tracking-tight text-zinc-800 sm:text-5xl dark:text-zinc-100">
+        <%= link_to :back, class: "mr-6" do %>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18" class="fill-zinc-100" />
+            </svg>
+        <% end %>
+        <%= post.title %>
+    </h1>
+    <p class="mt-6 text-base text-zinc-600 dark:text-zinc-400">
+        <%= post.created_at.strftime("%B %e, %Y") %>
+    </p>
+
+    <div class="mt-16">
+        <%= post.content %>
+    </div>
+</div>
