--- a/app/views/layouts/action_text/contents/_content.html.erb
+++ b/app/views/layouts/action_text/contents/_content.html.erb
@@ -1,3 +1,3 @@
-<div class="trix-content relative z-10 mt-2 text-sm text-zinc-600 dark:text-zinc-400">
+<div class="trix-content relative z-10 mt-2 text-lg text-zinc-600 dark:text-zinc-400 text-justify">
   <%= yield -%>
 </div>
